--- a/alexandria-frontend/package.json
+++ b/alexandria-frontend/package.json
@@ -19,10 +19,15 @@
 		"prettier": "^3.1.1",
 		"prettier-plugin-tailwindcss": "^0.5.9",
 		"svelte": "^4.2.7",
+		"svelte-awesome-color-picker": "^2.4.8",
 		"svelte-check": "^3.6.0",
 		"tailwindcss": "^3.4.0",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@fortawesome/fontawesome-free": "^6.5.1",
+		"d3": "^7.8.5"
+	}
 }
