--- a/alexandria-frontend/package.json
+++ b/alexandria-frontend/package.json
@@ -28,6 +28,7 @@
 	"type": "module",
 	"dependencies": {
 		"@fortawesome/fontawesome-free": "^6.5.1",
+		"axios": "^1.6.3",
 		"d3": "^7.8.5"
 	}
 }
